<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:visibility="invisible"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_et_sex"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:hint="@string/sex"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:startIconContentDescription="Sex"
                    app:startIconDrawable="@drawable/outline_male_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_sex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:inputType="none"
                        tools:ignore="KeyboardInaccessibleWidget,UnusedAttribute" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_et_age"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:hint="@string/age"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layout_et_sex"
                    app:startIconContentDescription="Age"
                    app:startIconDrawable="@drawable/outline_accessibility_new_24"
                    app:suffixText="@string/years">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:inputType="none"
                        tools:ignore="KeyboardInaccessibleWidget,UnusedAttribute" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_et_height"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:hint="@string/height"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layout_et_age"
                    app:startIconContentDescription="Height"
                    app:startIconDrawable="@drawable/baseline_height_24"
                    app:suffixText="@string/cm">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_height"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:inputType="number"
                        tools:ignore="KeyboardInaccessibleWidget,UnusedAttribute" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_et_weight"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:hint="@string/weight"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layout_et_height"
                    app:startIconContentDescription="Weight"
                    app:startIconDrawable="@drawable/baseline_monitor_weight_24"
                    app:suffixText="(kg)">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:inputType="number"
                        tools:ignore="KeyboardInaccessibleWidget,UnusedAttribute" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_et_lifestyle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:hint="@string/lifestyle"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layout_et_weight"
                    app:startIconContentDescription="Lifestyle"
                    app:startIconDrawable="@drawable/outline_run_circle_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_lifestyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:inputType="number"
                        tools:ignore="KeyboardInaccessibleWidget,UnusedAttribute" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/top_app_bar"
                style="@style/Widget.OwnTrainer.Toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/top_app_bar"
                app:navigationIcon="@drawable/baseline_arrow_back_24"
                app:navigationIconTint="@color/md_theme_light_onPrimary"
                app:title="@string/edit_profile"
                app:titleTextAppearance="@style/TextAppearance.OwnTrainer.ActionBar.Title" />
        </com.google.android.material.appbar.AppBarLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>