...
    <string name="number_must_be_valid">Number must be valid</string>
    <string name="age_must_be_valid">Age must be valid</string>
    <string name="height_must_be_valid">Height must be valid</string>
    <string name="could_not_find_any_more_matching_foods">Could not find any more matching foods.</string>
    <string name="could_not_find_any_matching_foods">Could not find any matching foods.</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="sedentary">Sedentary</string>
    <string name="extra_active">Extra active</string>
    <string name="very_active">Very active</string>
    <string name="moderately_active">Moderately active</string>
    <string name="lightly_active">Lightly active</string>
    <string name="age_too_young_alert">You have to be at least 18 years old to use this app.</string>
    <string name="weight_must_be_valid">Weight must be valid</string>
    <string name="add_new_reminder">Add new reminder</string>
    <string name="kcal_per_portion">kCal per portion</string>
    <string name="delete_reminder">Delete Reminder</string>
...
